[REST] deposit Fiat handler.
